adding bundlebee-base64-file support